<resources>
    <string name="STR_ACCESSORY_CAUTION_ACCESSORY_UNCOUPLED_EARBUDS">Connect to both your earbuds to update your software.</string>
    <string name="STR_ACCESSORY_CAUTION_BACKUP_BAND">This update shouldn\'t affect your personal data, but it\'s always a good idea to back up any important data just in case.</string>
    <string name="STR_ACCESSORY_CAUTION_BACKUP_WATCH">This update shouldn\'t affect your personal data, but it\'s always a good idea to back up any important data just in case.</string>
    <string name="STR_ACCESSORY_CAUTION_BAND">You won\'t be able to use your band while installing the update.</string>
    <string name="STR_ACCESSORY_CAUTION_EARBUDS">You won\'t be able to use your earbuds while installing the update.</string>
    <string name="STR_ACCESSORY_CAUTION_SETTINGS_MAY_CHANGE_BAND">Some settings on your band may change.</string>
    <string name="STR_ACCESSORY_CAUTION_SETTINGS_MAY_CHANGE_EARBUDS">Some settings for your earbuds may change.</string>
    <string name="STR_ACCESSORY_CAUTION_SETTINGS_MAY_CHANGE_WATCH">Some settings on your watch may change.</string>
    <string name="STR_ACCESSORY_CAUTION_TITLE">Caution</string>
    <string name="STR_ACCESSORY_CAUTION_WATCH">You won\'t be able to use your watch while installing the update.</string>
    <string name="STR_ACCESSORY_CONNECTING_BAND">Connecting to band…</string>
    <string name="STR_ACCESSORY_CONNECTING_EARBUDS">Talking to your earbuds…</string>
    <string name="STR_ACCESSORY_CONNECTING_WATCH">Connecting to watch…</string>
    <string name="STR_ACCESSORY_CONNECTION_FAILED_BAND">Make sure your band is connected to your phone using Bluetooth and try again.</string>
    <string name="STR_ACCESSORY_CONNECTION_FAILED_EARBUDS">Connect to both your earbuds to update your software.</string>
    <string name="STR_ACCESSORY_CONNECTION_FAILED_WATCH">Make sure your watch is connected to your phone using Bluetooth and try again.</string>
    <string name="STR_ACCESSORY_COPY_FAILED_BAND">Couldn\'t copy the software update to your band.</string>
    <string name="STR_ACCESSORY_COPY_FAILED_EARBUDS">Couldn\'t copy the software update to your earbuds.</string>
    <string name="STR_ACCESSORY_COPY_FAILED_WATCH">Couldn\'t copy the software update to your watch.</string>
    <string name="STR_ACCESSORY_COPY_PROGRESS">Copying update…</string>
    <string name="STR_ACCESSORY_COPY_RETRY_BAND">Couldn\'t copy the software update to your band. Try again?</string>
    <string name="STR_ACCESSORY_COPY_RETRY_EARBUDS">An update for your earbuds was interrupted and didn\'t finish installing.</string>
    <string name="STR_ACCESSORY_COPY_RETRY_EARBUDS_TITLE">Continue earbuds software update?</string>
    <string name="STR_ACCESSORY_COPY_RETRY_LATER_ACCESSORY_UNCOUPLED_EARBUDS_WITH_PHONE">Couldn\'t copy the software update to your earbuds. Connect both of your earbuds to your phone, then try again.</string>
    <string name="STR_ACCESSORY_COPY_RETRY_LATER_ACCESSORY_UNCOUPLED_EARBUDS_WITH_TABLET">Couldn\'t copy the software update to your earbuds. Connect both of your earbuds to your tablet, then try again.</string>
    <string name="STR_ACCESSORY_COPY_RETRY_LATER_BAND">Couldn\'t copy the software update to your band. Try again later.</string>
    <string name="STR_ACCESSORY_COPY_RETRY_LATER_EARBUDS">Couldn\'t copy the software update to your earbuds. Try again later.</string>
    <string name="STR_ACCESSORY_COPY_RETRY_LATER_WATCH">Couldn\'t copy the software update to your watch. Try again later.</string>
    <string name="STR_ACCESSORY_COPY_RETRY_WATCH">Couldn\'t copy the software update to your watch. Try again?</string>
    <string name="STR_ACCESSORY_CURRENT_VERSION">Current version: %s</string>
    <string name="STR_ACCESSORY_DOWNLOAD_AND_UPDATE_CONFIRM_TITLE_BAND">Update your band</string>
    <string name="STR_ACCESSORY_DOWNLOAD_AND_UPDATE_CONFIRM_TITLE_EARBUDS">Update your earbuds</string>
    <string name="STR_ACCESSORY_DOWNLOAD_CONFIRM_TITLE">Update your watch</string>
    <string name="STR_ACCESSORY_DOWNLOAD_CONFIRM_WIFI_SETTINGS_DETAILS">Using mobile data to download this update may result in additional charges. Using Wi-Fi is recommended.</string>
    <string name="STR_ACCESSORY_DOWNLOAD_COULDNT_COMPLETE_DOWNLOAD_TITLE">Couldn\'t complete download</string>
    <string name="STR_ACCESSORY_DOWNLOAD_COULDNT_DOWNLOAD_UPDATE_TITLE">Couldn\'t download update</string>
    <string name="STR_ACCESSORY_DOWNLOAD_FAILED">Download failed.</string>
    <string name="STR_ACCESSORY_DOWNLOAD_FAILED_DELTA_OVER_SIZE">This software update cannot be downloaded via a mobile network. It exceeds the maximum size allowed. If possible, download this update via a Wi-Fi network.</string>
    <string name="STR_ACCESSORY_DOWNLOAD_FAILED_NETWORK_DISCONNECTED_PHONE">Your phone disconnected from the network. The download will restart when it reconnects.</string>
    <string name="STR_ACCESSORY_DOWNLOAD_FAILED_NETWORK_DISCONNECTED_TABLET">Your tablet disconnected from the network. The download will restart when it reconnects.</string>
    <string name="STR_ACCESSORY_DOWNLOAD_FAILED_WIFI_DISCONNECTED">Connect to a Wi-Fi network to continue downloading the update.</string>
    <string name="STR_ACCESSORY_DOWNLOAD_PROGRESS">Downloading update…</string>
    <string name="STR_ACCESSORY_DOWNLOAD_RETRY_CONFIRM">The update package has not been downloaded completely. Mobile networks are available. Downloading via a mobile network may result in additional charges. If possible, download via a Wi-Fi network.</string>
    <string name="STR_ACCESSORY_DOWNLOAD_RETRY_CONFIRM_VIA_WIFI_PHONE">Your phone is now connected to Wi-Fi.</string>
    <string name="STR_ACCESSORY_DOWNLOAD_RETRY_CONFIRM_VIA_WIFI_TABLET">Your tablet is now connected to Wi-Fi.</string>
    <string name="STR_ACCESSORY_DOWNLOAD_RETRY_CONFIRM_VIA_WIFI_TITLE">Continue downloading update?</string>
    <string name="STR_ACCESSORY_FORCE_INSTALL_CONFIRM_TITLE_WATCH">Critical update available</string>
    <string name="STR_ACCESSORY_FORCE_INSTALL_CONFIRM_WATCH">Your watch will restart in %d seconds to start updating.</string>
    <string name="STR_ACCESSORY_INSTALL_CONFIRM_SCHEDULED">Update will be installed automatically at %1$s on %2$s.</string>
    <string name="STR_ACCESSORY_INSTALL_CONFIRM_SCHEDULED_TIMEPICKER_SET_TIME_TOAST_TEXT">Update will be installed automatically at %1$s on %2$s.</string>
    <string name="STR_ACCESSORY_INSTALL_CONFIRM_SCHEDULED_TIMEPICKER_TITLE">Install the update at</string>
    <string name="STR_ACCESSORY_INSTALL_CONFIRM_TITLE_WATCH">Update your watch</string>
    <string name="STR_ACCESSORY_LAST_SUCCESSFUL_UPDATE">Last successful update</string>
    <string name="STR_ACCESSORY_LAST_UPDATE_DAY_TIME">%1$s at %2$s</string>
    <string name="STR_ACCESSORY_LAST_UPDATE_TITLE">Last update</string>
    <string name="STR_ACCESSORY_LOW_BATTERY_BAND">Charge your band to at least %d%%, then try again.</string>
    <string name="STR_ACCESSORY_LOW_BATTERY_EARBUDS">Charge your earbuds to at least %d%%, then try again.</string>
    <string name="STR_ACCESSORY_LOW_BATTERY_TITLE">Battery low</string>
    <string name="STR_ACCESSORY_LOW_BATTERY_WATCH">Charge your watch to at least %d%%, then try again.</string>
    <string name="STR_ACCESSORY_LOW_MEMORY_COPY_WATCH">To copy this update, free up at least %1$s %2$s of space on your watch. You can do this by deleting any apps, files, or watch faces you no longer use.</string>
    <string name="STR_ACCESSORY_LOW_MEMORY_DOWNLOAD_PHONE">To download this update, free up at least %s MB of space on your phone. You can do this by moving files and data to the cloud or deleting any apps or files you no longer use.</string>
    <string name="STR_ACCESSORY_LOW_MEMORY_DOWNLOAD_TABLET">To download this update, free up at least %s MB of space on your tablet. You can do this by moving files and data to the cloud or deleting any apps or files you no longer use.</string>
    <string name="STR_ACCESSORY_LOW_MEMORY_DOWNLOAD_WATCH">To download this update, free up at least %1$s %2$s of space on your watch. You can do this by deleting any apps, files, or watch faces you no longer use.</string>
    <string name="STR_ACCESSORY_LOW_MEMORY_INSTALL_WATCH">To install this update, free up at least %1$s %2$s of space on your watch. You can do this by deleting any apps, files, or watch faces you no longer use.</string>
    <string name="STR_ACCESSORY_LOW_MEMORY_TITLE">Not enough space</string>
    <string name="STR_ACCESSORY_MODIFIED">No software updates are available.</string>
    <string name="STR_ACCESSORY_MODIFIED_TITLE_BAND">Band modified</string>
    <string name="STR_ACCESSORY_MODIFIED_TITLE_WATCH">Watch modified</string>
    <string name="STR_ACCESSORY_NO_UPDATABLE_VERSION">Your software is up to date.</string>
    <string name="STR_ACCESSORY_PROGRESS_MB_PER_MB">%1$s %2$s/%3$s %4$s</string>
    <string name="STR_ACCESSORY_SERVER_PARTIALLY_OPEN">Unable to download the software update. The server has reached its daily download limit. Try again later.</string>
    <string name="a_few_legal_items_to_review">A few legal items to review</string>
    <string name="action_enabled_label">%s</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="card_menu_earbuds_software_update">Earbuds software update</string>
    <string name="congrats_on_your_new_desc_permission">Check and allow the %s required for your earbuds to access your phone.</string>
    <string name="details">Details</string>
    <string name="download_install_manually">Download and install</string>
    <string name="download_update_manually_content1">Check for updates and download them.</string>
    <string name="end_user_license_agreement">End User License Agreement</string>
    <string name="equalizer">Equalizer</string>
    <string name="last_update">Last update</string>
    <string name="last_update_body">The last update was installed on %1$s at %2$s.</string>
    <string name="noise_controls">Noise Controls</string>
    <string name="optional">%s (optional)</string>
    <string name="permissions">Permissions</string>
    <string name="privacy_policy">Privacy Notice</string>
    <string name="read_notifications_aloud">Read notifications aloud</string>
    <string name="report_diagnostic_data">Diagnostic data</string>
    <string name="report_diagnostic_info_description">Samsung would like your help in improving the quality and performance of its products and services.\10Your device includes diagnostic software that may, with your consent, automatically collect diagnostic and usage data from your device. Tap OK to send this data to Samsung.</string>
    <string name="roboto_light">sans-serif-light</string>
    <string name="roboto_medium">sec-roboto-light</string>
    <string name="roboto_regular">sec-roboto-light</string>
    <string name="sending_of_diagnostic_data_optional">Sending of diagnostic data (optional)</string>
    <string name="settings_game_mode_title">Gaming mode</string>
    <string name="settings_touchpad">Touch controls</string>
    <string name="settings_touchpad_option_menu">Touch and hold</string>
    <string name="settings_voice_wakeup_title">Bixby voice wake-up</string>
    <string name="tips_double_tap">Double tap</string>
    <string name="tips_settings">Settings</string>
    <string name="tips_single_tap">Tap</string>
    <string name="tips_touch_hold">Touch and hold</string>
    <string name="tips_triple_tap">Triple tap</string>
    <string name="tips_turn_on_touch_controls_in_settings">To play the next or previous track by tapping, turn on double and triple tap controls in settings.</string>
    <string name="to_continuing">To continue, agree to the %1$sEnd User License Agreement%2$s and %3$sPrivacy Notice%4$s.</string>
    <string name="vn_off">Off</string>
</resources>