<?xml version="1.0" encoding="utf-8"?>
<actions>
    <action category="galaxy_buds2" component="com.samsung.accessory.hearablemgr.core.bixbyroutine.RoutineActionProvider" config_activity="com.samsung.accessory.hearablemgr.core.bixbyroutine.RoutineNoiseControlConfigActivity" enabled_label_format="@string/action_enabled_label" icon="@drawable/routines_ic_action_active_noise_reduction" label="@string/noise_controls" negative_enabled_label_format="@string/vn_off" support_negative="true" tag="berry_noise_controls"/>
    <action category="galaxy_buds2" component="com.samsung.accessory.hearablemgr.core.bixbyroutine.RoutineActionProvider" config_activity="com.samsung.accessory.hearablemgr.core.bixbyroutine.RoutineEqualizerConfigActivity" enabled_label_format="@string/action_enabled_label" icon="@drawable/routines_ic_action_equalizer" label="@string/equalizer" negative_enabled_label_format="@string/vn_off" support_negative="true" tag="berry_equalizer"/>
    <action category="galaxy_buds2" component="com.samsung.accessory.hearablemgr.core.bixbyroutine.RoutineActionProvider" config_activity="com.samsung.accessory.hearablemgr.core.bixbyroutine.RoutineNotificationConfigActivity" enabled_label_format="@string/action_enabled_label" icon="@drawable/routines_ic_action_notifications" label="@string/read_notifications_aloud" negative_enabled_label_format="@string/vn_off" support_negative="true" tag="berry_notifications"/>
    <action category="galaxy_buds2" component="com.samsung.accessory.hearablemgr.core.bixbyroutine.RoutineActionProvider" config_activity="com.samsung.accessory.hearablemgr.core.bixbyroutine.RoutineTouchControlsConfigActivity" enabled_label_format="@string/action_enabled_label" icon="@drawable/routines_ic_action_touchpad" label="@string/settings_touchpad" negative_enabled_label_format="@string/vn_off" support_negative="true" tag="berry_touch_controls"/>
    <action category="galaxy_buds2" component="com.samsung.accessory.hearablemgr.core.bixbyroutine.RoutineActionProvider" config_activity="com.samsung.accessory.hearablemgr.core.bixbyroutine.RoutineGamingModeConfigActivity" enabled_label_format="@string/action_enabled_label" icon="@drawable/routines_ic_action_gaming_mode" label="@string/settings_game_mode_title" negative_enabled_label_format="@string/vn_off" support_negative="true" tag="berry_gaming_mode"/>
    <action category="galaxy_buds2" component="com.samsung.accessory.hearablemgr.core.bixbyroutine.RoutineActionProvider" config_activity="com.samsung.accessory.hearablemgr.core.bixbyroutine.RoutineTouchpadOptionConfigActivity" enabled_label_format="@string/action_enabled_label" icon="@drawable/routines_ic_action_touchpad" label="@string/settings_touchpad_option_menu" negative_enabled_label_format="@string/vn_off" support_negative="true" tag="berry_touchpad_option"/>
    <action category="galaxy_buds2" component="com.samsung.accessory.hearablemgr.core.bixbyroutine.RoutineActionProvider" config_activity="com.samsung.accessory.hearablemgr.core.bixbyroutine.RoutineBixbyVoiceWakeUpConfigActivity" enabled_label_format="@string/action_enabled_label" icon="@drawable/routines_ic_action_bixby_voice_wake_up" label="@string/settings_voice_wakeup_title" negative_enabled_label_format="@string/vn_off" support_negative="true" tag="berry_bixby_voice_wake_up"/>
</actions>
