<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent" android:layout_height="match_parent">
    <com.samsung.accessory.hearablemgr.common.p009ui.ResponsiveWidthLayout android:layout_gravity="center_horizontal" android:layout_width="match_parent" android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent" android:layout_height="match_parent">
            <Button android:textSize="15sp" android:textStyle="bold" android:textColor="#fafafa" android:gravity="center" android:id="@+id/button_continue" android:paddingTop="8dp" android:paddingBottom="8dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="18dp" android:minWidth="74dp" android:minHeight="36dp" android:fontFamily="@string/roboto_medium" android:paddingStart="16dp" android:paddingEnd="16dp" android:layout_marginEnd="24dp" android:backgroundTint="@color/color_button_background" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0"/>
            <ScrollView android:scrollbars="vertical" android:layout_width="match_parent" android:layout_height="0dp" android:layout_marginBottom="18dp" android:fillViewport="true" app:layout_constraintBottom_toTopOf="@+id/button_continue" app:layout_constraintTop_toTopOf="0">
                <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
                    <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="1">
                        <TextView android:textSize="27sp" android:textColor="@color/color_list_item_text" android:ellipsize="end" android:gravity="center" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="71dp" android:layout_marginBottom="73dp" android:text="@string/a_few_legal_items_to_review" android:maxLines="2" android:lineSpacingExtra="5sp" android:fontFamily="@string/roboto_regular" android:layout_marginStart="24dp" android:layout_marginEnd="24dp"/>
                        <TextView android:textSize="14sp" android:textColor="@color/color_description_text" android:textColorLink="@color/color_description_text" android:id="@+id/text_description1" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/to_continuing" android:lineSpacingExtra="8sp" android:fontFamily="@string/roboto_regular" android:layout_marginStart="24dp" android:layout_marginEnd="24dp"/>
                        <LinearLayout android:gravity="center" android:orientation="horizontal" android:id="@+id/layout_accessibility_links_01" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="18dp" android:layout_marginStart="24dp" android:layout_marginEnd="24dp">
                            <TextView android:textSize="14sp" android:textStyle="bold" android:textColor="@color/color_description_text" android:gravity="center" android:id="@+id/text_link_eula" android:paddingTop="8dp" android:paddingBottom="8dp" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/end_user_license_agreement" android:layout_weight="1" android:fontFamily="@string/roboto_regular" android:paddingStart="4dp"/>
                            <TextView android:textSize="14sp" android:textStyle="bold" android:textColor="@color/color_description_text" android:gravity="center" android:id="@+id/text_link_privacy_policy" android:paddingTop="8dp" android:paddingBottom="8dp" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/privacy_policy" android:layout_weight="1" android:fontFamily="@string/roboto_regular" android:paddingEnd="4dp"/>
                        </LinearLayout>
                        <TextView android:textSize="14sp" android:textColor="@color/color_description_text" android:textColorLink="@color/color_description_text" android:id="@+id/text_description2" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="17dp" android:text="@string/congrats_on_your_new_desc_permission" android:includeFontPadding="true" android:lineSpacingExtra="8sp" android:fontFamily="@string/roboto_regular" android:layout_marginStart="24dp" android:layout_marginEnd="24dp"/>
                        <TextView android:textSize="14sp" android:textStyle="bold" android:textColor="@color/color_description_text" android:gravity="center" android:id="@+id/text_link_permissions" android:padding="8dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/permissions" android:fontFamily="@string/roboto_light" android:layout_marginStart="24dp" android:layout_marginEnd="24dp"/>
                    </LinearLayout>
                    <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
                        <com.samsung.accessory.hearablemgr.common.p009ui.DottedLineView android:id="@+id/dotted_line" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="16dp" android:layout_marginBottom="10dp" android:alpha="0.26" android:layout_marginStart="24dp" android:layout_marginEnd="24dp" app:dotColor="@color/color_list_item_text"/>
                        <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@+id/layout_checkbox_disgnostic_data" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="6dp" android:layout_marginStart="18dp" android:layout_marginEnd="24dp">
                            <CheckBox android:id="@+id/checkbox_diagnostic_data" android:layout_width="wrap_content" android:layout_height="wrap_content"/>
                            <TextView android:textSize="14sp" android:textColor="@color/color_description_text" android:ellipsize="end" android:gravity="center_vertical" android:id="@+id/text_diagnostic_data" android:paddingTop="6dp" android:paddingBottom="6dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:minHeight="32dp" android:text="@string/sending_of_diagnostic_data_optional" android:maxLines="1" android:lineSpacingExtra="2sp" android:fontFamily="@string/roboto_regular" android:layout_marginStart="6dp"/>
                        </LinearLayout>
                        <TextView android:textSize="14sp" android:textStyle="bold" android:textColor="@color/color_description_text" android:id="@+id/text_details" android:paddingTop="6dp" android:paddingBottom="6dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/details" android:fontFamily="@string/roboto_medium" android:layout_marginStart="56dp" android:layout_marginEnd="24dp"/>
                    </LinearLayout>
                </LinearLayout>
            </ScrollView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.samsung.accessory.hearablemgr.common.p009ui.ResponsiveWidthLayout>
</FrameLayout>
