<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent" android:layout_height="wrap_content">
    <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
        <TextView android:textSize="16sp" android:textColor="@color/color_contents_description_text" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="18dp" android:text="@string/report_diagnostic_info_description" android:fontFamily="@string/roboto_regular" android:textDirection="locale" android:layout_marginStart="24dp" android:layout_marginEnd="24dp" android:letterSpacing="0.01"/>
        <TextView android:textSize="16sp" android:textStyle="bold" android:textColor="@color/diagnostic_data_color" android:id="@+id/text_diagnostic_data" android:background="?android:attr/selectableItemBackground" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="4dp" android:text="@string/report_diagnostic_data" android:lineSpacingExtra="4sp" android:fontFamily="@string/roboto_regular" android:textDirection="locale" android:layout_marginStart="24dp" android:layout_marginEnd="24dp"/>
        <View android:background="@drawable/dot_line" android:layout_width="match_parent" android:layout_height="2dp" android:layout_marginTop="21.5dp" android:layout_marginBottom="21.5dp" android:layerType="software" android:layout_marginStart="@dimen/list_item_content_inset" android:layout_marginEnd="@dimen/list_item_content_inset"/>
        <androidx.appcompat.widget.AppCompatCheckBox android:textSize="14sp" android:textStyle="bold" android:textColor="@color/color_contents_description_text" android:id="@+id/checkbox_agree" android:paddingTop="5dp" android:paddingBottom="5dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="24dp" android:text="@string/optional" android:fontFamily="@string/roboto_regular" android:paddingStart="5dp" android:layout_marginStart="27dp" android:layout_marginEnd="24dp"/>
    </LinearLayout>
</ScrollView>
